--- a/index.html
+++ b/index.html
@@ -306,9 +306,9 @@
         <a href="mailto:ahmhd0055@gmail.com" class="link">ahmhd0055@gmail.com</a>
         <div class="social">
           Find Us On Social Networks
-          <a href="https://www.linkedin.com/in/mohamed-ahmed-1aa19b265/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-          <a href="https://github.com/MohamedAhm74" target="_blank"><i class="fa-brands fa-github"></i></a>
-          <a href="https://www.facebook.com/profile.php?id=100012447783349&locale=ar_AR" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+          <a href="https://www.linkedin.com/in/mohamed-a-abdallah" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://github.com/mohamed-ahmed-a-a" target="_blank"><i class="fa-brands fa-github"></i></a>
+          <a href="https://www.facebook.com/mohamedahmedabdallah2" target="_blank"><i class="fa-brands fa-facebook"></i></a>
           <a href="https://www.instagram.com/mohamed_ahmed_a_a/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
           <a href="https://twitter.com/Mohamed77288177" target="_blank"><i class="fab fa-twitter"></i></a>
         </div>
